Brok previous main into multiple parts.